# rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: clients.rs  main.rs  routes.rs
templates/: base.html.tera  index.html.tera  login.html.tera  signup.html.tera
templates/css/: output.css
