[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenvy = "0.15.7"
oauth2 = "4.4.2"
ratatui = "0.26.1"
reqwest = "0.12.3"
rocket = { version = "0.5.0", features = ["secrets"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = "1.3.1"
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
url = "2.5.0"
