[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
oauth2 = "4.4.2"
ratatui = "0.26.1"
reqwest = "0.12.3"
rocket = { version = "0.5.0", features = ["secrets"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
url = "2.5.0"
