[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
oauth2 = "4.4.2"
pocketbase-sdk = "0.1.1"
ratatui = "0.26.1"
reqwest = "0.12.3"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
cargo-cmd = "0.3.1"
cargo-watch = "8.5.2"

[package.metadata.commands]
watch = "cargo watch -c -x run -s \"npx tailwindcss -i ./templates/css/input.css -o ./templates/css/output.css --watch\""
